--- a/whereToEat/AndroidManifest.xml
+++ b/whereToEat/AndroidManifest.xml
@@ -23,6 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name="com.example.wheretoeat.RecommendMenu"></activity>
+        <activity android:name="com.example.wheretoeat.CommentMenu"></activity>
+        <activity android:name="com.example.wheretoeat.EndMenu"></activity>
     </application>
 
 </manifest>
